--- a/Post/css/style.css
+++ b/Post/css/style.css
@@ -369,7 +369,7 @@ header {
 			rgba(254, 246, 237, 0.3) 90.86%,
 			rgba(254, 246, 237, 0) 100%
 		),
-		url("/media/ctabg.png");
+		url("/LivingWithGraceCC/media/ctabg.png");
 	background-size: cover;
 	background-position: 20% 40%;
 	padding: 6rem;
