--- a/Home/css/style.css
+++ b/Home/css/style.css
@@ -548,7 +548,7 @@ header {
 
 .services .headingText h2 {
 	left: -20%;
-	text-wrap: nowrap;
+	text-wrap: nowrap !important;
 }
 
 .serviceContent {
@@ -658,7 +658,7 @@ header {
 
 .blog .headingText h2 {
 	left: -60%;
-	text-wrap: nowrap;
+	text-wrap: nowrap !important;
 }
 
 .blogContent {
